[package]
name = "syncthreads"
version = "0.1.0"
edition = "2024"

[dependencies]
aarc = "0.3.2"
arc-atomic = "0.1.0"
arc-swap = "1.7.1"
atomic-wait = "1.1.0"
crossbeam = "0.8.4"
num_cpus = "1.16.0"
rayon = "1.10.0"

[dev-dependencies]
aligned-vec = "0.6.2"
diol = { version = "0.8.3", default-features = false }
rayon = "1.10.0"
